--- a/toc.tex
+++ b/toc.tex
@@ -4,7 +4,7 @@
 \tableofcontents
 \listoffigures
 \listoftables
-\listoflistings
+\lstlistoflistings
 
 \let\stdsection\section
 \renewcommand\section{\newpage\stdsection}
