--- a/outline.org
+++ b/outline.org
@@ -14,7 +14,7 @@
   is debated, its importance is not \citep{Scherer2005}. The
   impact that emotions have on everyday life is enormous yet hard to
   pinpoint.
-  
+
   \citet{Fontaine2007} define emotions as a set of interrelated
   components, covering a wide range of behavior. These components are
   \citet{Fontaine2007} argue, appraisals of events,
@@ -23,12 +23,12 @@
   \citep{Fontaine2007}. The antecedents of emotions are equally
   varied as the consequents and may be both internal as well as
   external \citep{Scherer2005}.
-  
+
   One important adaptive function of emotions is regulating social
   interactions by facilitating group cohesion and
   collaboration. Understanding the emotions of others is an essential
   aspect of many social situations. \parencite{Niedenthal2012}.
-  
+
   The ability to process the emotional information contained both in
   the self and in others has been referred to in the literature as
   emotional intelligence
@@ -42,7 +42,7 @@
   emotional intelligence seems to be the ability to identify the
   emotions of oneself and others, with other cognitive-social
   abilities depedending on this base. \citep{Mikolajczak2014}
-  
+
   The concept of emotional intelligence, however, is not
   uncontroversial. Various different authors with different approaches
   suggest widely different models of emotional intelligence
@@ -55,7 +55,7 @@
   \citep[e.g.][]{Freudenthaler2007}. These results call into question
   the divergent validity, to that point of some authors (TK Locke and
   someone else) doubting overall usefulness of the concept.
-  
+
   Despite the controversy related to the concept itself, several
   approaches have been used to measure emotional intelligence, both
   ability tests \citep{Mayer2003}, self-reported ability
@@ -72,7 +72,7 @@
   indicate that the recognition of emotional faces is a single ability
   as opposed to multiple separate abilities, affirming to some degree
   the convergent validity to the construct of emotional intelligence.
-  
+
   Another approach that might be taken for emotional intelligence
   testing is using emotional facial expressions in a manner similar to
   \citet{Schlegel2012}, where the ability to classify emotional facial
@@ -81,7 +81,7 @@
   \citep{Ekman2003}. This suggest facial expression recognition
   ability could be seen as a measure of general emotional
   intelligence.
-  
+
   Facial expressions, \citet{Ekman1969a} found, are to a large extent
   culturally invariant, a prerequisite for valid measure of emotional
   intelligence. The set of culturally invariant basic emotions
@@ -99,7 +99,7 @@
   in the BART paradigm consists of a display of an emotional facial
   expression with forward- and backward masks of a neutral emotional
   face to provide a fixation and avoid after-images respectively \citep{Ekman1974a}.
-  
+
 ** Research problem
    Testing and training applications are a central part of
    micro-expression research \citep{Ekman1992}. However, despite
@@ -127,10 +127,10 @@
    better recruitment decisions. Finally, psychological tests using
    the micro-expression paradigm may be improved based on the
    development of new tests.
-     
+
 ** Research question
    What are the key principles for developing EQ-tests based on micro-expressions?
-   
+
 * Extended background
   In the extended background a number of theoretical models,
   applications, earlier tests and stimulus sets are reviewed an are
@@ -192,7 +192,7 @@
    trait emotional intelligence is a personality trait and
    uncorrelated with ability measures of emotional intelligence, it is
    distinct from traditional personality factors.
-   
+
    The incompatibility argument is expanded further by
    \citet{Petrides2010}, arguing that trait and ability measures of
    emotional intelligence cannot be grouped in any meaningful
@@ -228,7 +228,7 @@
    such as \citet{Petrides2010} argue that ability measures of
    emotional intelligence are lacking.  On the other hand proponents
    of the ability model argue that trait models just measure various
-   aspects of personality. 
+   aspects of personality.
 
    Another approach was taken by \citet{Freudenthaler2007},
    interpreting trait and ability as typical and maximum performance
@@ -253,9 +253,9 @@
    while retaining internal cohessiveness, developing tests based on
    the insection of theoretical frameworks may therefore make a test
    independent of which framework prevails.
-    
+
 ** Practical Applications for Emotional Intelligence
-   
+
    Desipte the difficulty of accurately defining the term, proponents
    of emotional intelligence argue its usefulness.  In a review by
    \citet{Mayer2008} identified seven central results of emotional
@@ -284,7 +284,7 @@
    emotional intelligence offers some predictive value for performance
    leadership roles \citep{McCleskey2014}. This could make emotional
    intelligence an important tool for executive search.
-   
+
    Moreover, emotional intelligence scales have been used for
    corporate recruiting for roles requiring social interaction. These
    results seem to suggest that emotional intelligence may be useful
@@ -308,7 +308,7 @@
    measuring emotional intelligence. The different tests of emotional
    intelligence usually fall into one of only one of the theoretical
    models of emotional intelligence.
-   
+
     An early psychometric test of emotional intelligence is the
     Mayer-Salovey-Caruso Emotional Intelligence (MSCEIT), which is
     based on the theoretical framework introduced by
@@ -429,7 +429,7 @@
    deceit have been found. For example, \cite{Ekman1991} found that
    some professional groups (e.g. the U.S. Secret Service) are better
    at detecting deceit, using both verbal and non-verbal cues
-   \cite{Ekman1991}. 
+   \cite{Ekman1991}.
 
    Another important result is that of \citet{Frank1997}, which seems
    to suggest that the ability to detect deceit is generalized to a
@@ -466,7 +466,7 @@
    restricted to one part of the face. This restriction is meant to
    simulate a situation where the person is consciously suppressing a
    facial expression. \citep{Ekman2003}
-   
+
 ** Stimulus sets of emotional facial expressions
 
    To use the paradigms discussed it is necessary to use a set of
@@ -591,7 +591,7 @@
    further by \citet[chapter~1]{Johannesson2014}, who hold that
    practical problems ought to be addressed with design research
    approaches.
-    
+
    \citet[chapter 4]{Johannesson2014} put forward a model of design
    science based on five activities. The first activity, Explicate
    Problem, aims to find the practical problems that needs
@@ -612,7 +612,7 @@
    Comparing Perjons & Johannesson v.s. earlier descriptions and our
    chosen approach. (TK)
 
-   
+
 ** Chosen stages
    Because of limitations in scope for the present study, only a
    subset of design science activities were performed in the present
@@ -654,7 +654,7 @@
     and their interests do not align with the people administering the
     test. Similarly, practitioners in the area often have little
     understanding of the tests they administer.
-    
+
     Finally, it is difficult to find a significantly large population
     of researchers on the area to establish qualitative
     saturation. This would in the view of
@@ -676,7 +676,7 @@
    combination of different kinds of methods may allow for better
    capturing the relevant aspects of emotional intelligence and
    reaching sufficient coverage of the domain.
-     
+
    The literature review was chosen to ensure a sufficient degree of
    qualitative coverage of the area of research. A wide qualitative
    coverage is particularly important because of the controversial
@@ -684,7 +684,7 @@
    allows for finding a reasonably agreed upon definition of emotional
    intelligence, which is neccessary for the developed artefact to be
    useful.
-   
+
    The quantitative analysis of earlier data constitutes experimental
    method \citep{Denscombe2010}, for the reason that the data was
    collected in an experimental settings. The existence of prior data,
@@ -765,13 +765,13 @@
    \begin{equation} \label{e_ppv}
    \mathit{PPV} = \frac{H}{H + FA}
    \end{equation}
-   
+
    Equation \ref{e_ppv} defines the positive predictive value.
 
    \begin{equation} \label{e_npv}
    \mathit{NPV} = \frac{CR}{CR + M}
    \end{equation}
-   
+
    Negative predictve value is defined according to Equation
    \ref{e_npv}.
 
@@ -806,7 +806,7 @@
    the requirements. This sort of explorative process allows
    developers to better adapt the software being developed as their
    understanding of the requirements grows.
-   
+
 ** Evaluation
    $N=?$ participants were administered the test
    software. Participants were positioned at a distance of 1m from the
@@ -843,7 +843,7 @@
 *** Analysis of old data
     Each of the data-sets used in the study were analyzed separately
     with the goal of generating requirements for the system
-    
+
     The first data-set contains 2149 correct responses and 1351
     incorrect responses for a total of hit-rate of 61%. A confusion
     matrix was computed as shown in table \ref{study1confusion}. In
@@ -852,14 +852,14 @@
     accuracy, participants were unlikely to answer disgust. Anger was
     the most accurately detected emotion, owning to a high degree of
     overall detection.
-    
+
     \input{study-one-hitrates-emotion.tex}
 
-    
-    
+
+
     The second data-set consisted of 72 participants, each taking the
     form of a , the average accuracy was $72.99\%$ ($S=12.14$).
-    
+
     #+CAPTION: Hit-rates and standard deviations by emotion in study 2.
     #+ATTR_LATEX: :environment tabulary :align lll :width \textwidth
     | Emotions  |  $HR$ |   $S$ |
@@ -870,15 +870,15 @@
     | Anger     | 79.15 | 20.87 |
     | Contempt  | 57.25 | 33.88 |
     | Fear      | 68.75 | 23.75 |
-    | Sadness   |  60.9 | 26.26 | 
-    
+    | Sadness   |  60.9 | 26.26 |
+
     To investigate the effects of training, a linear model was
     constructed for the constructed with the number of trials as the
     independent variable and the hit-rate as the dependent variable. A
     significant effect of trial number was found ($t=4.56$, $p<0.001$,
     $df=68$). This effect indicates that accuracy improve throughout
     the experiment itself.
-     
+
 *** Requirements
 
     In reviewing earlier research we found a number of suitable tests
@@ -978,7 +978,7 @@
     with the RaFD data-set used in these. It seems appropriate then to
     use RaFD for evaluating the artefact developed for the present
     study, while leaving data-set as a configurable variable.
-    
+
     From the conclusions drawn a number of requirements were
     derived.
 
@@ -1007,14 +1007,20 @@
 
 ** Evaluation
    The test scores showed a correlation of X
-   
+
 * Discussion
 ** Limitations
    The evaluation of the developed artefact is limited several
    ways. As the the study was performed with participants from a
    single country it is difficult to acertain validity across
-   cultures. Likewise, the results of the present study are difficult
-   to apply to other stimulus sets as differences between stimulussets
+   cultures.
+
+   Additionally, the sample included only university students and
+   socioeconomic factors may therefore bias the range of emotional
+   intelligence results obtained in the present study.
+
+   Likewise, the results of the present study are difficult
+   to apply to other stimulus sets as differences between stimulus sets
    may affect both the reliability and validity of the overall test.
 
 * Conclusion
