--- a/refs.bib
+++ b/refs.bib
@@ -885,3 +885,35 @@ volume = {12},
 year = {2012}
 }
 
+@article{Abrahamsson2002,
+abstract = {Agile denoting the quality of being agile; readiness for motion; nimbleness, activity, dexterity in motion software development methods are attempting to offer an answer to the eager business community asking for lighter weight along with faster and nimbler software development processes. This is especially the case with the rapidly growing and volatile Internet software industry as well as for the emerging mobile application environment. The new agile methods have evoked a substantial amount of literature and debates. However, academic research on the subject is still scarce, as most of existing publications are written by practitioners or consultants. The aim of this publication is to begin filling this gap by systematically reviewing the existing literature on agile software development methodologies. This publication has three purposes. First, it proposes a definition and a classification of agile software development approaches. Second, it analyses ten software development methods that can be characterized as being agile against the defined criteria. Third, it compares these methods and highlights their similarities and differences. Based on this analysis, future research needs are identified and discussed.},
+author = {Abrahamsson, P and Salo, O and Ronkainen, J and Warsta, J},
+file = {:Users/whn/data/mendeley/d019344e40de6fa0706c2f0cd74f2822.pdf:pdf},
+isbn = {951–38–6009–4},
+issn = {1235–0621},
+journal = {Vtt Publications},
+keywords = {agile methods,agile modelling,agile processes,extreme programming,open source software development,software development,software project management},
+mendeley-groups = {mag\_dsv},
+pages = {167--168},
+title = {{Agile software development methods}},
+url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.161.5931\&rep=rep1\&type=pdf},
+volume = {478},
+year = {2002}
+}
+
+@article{Dingsøyr2012,
+abstract = {Ever since the agile manifesto was created in 2001, the research community has devoted a great deal of attention to agile software development. This article examines publications and citations to illustrate how the research on agile has progressed in the 10 years following the articulation of the manifesto. Specifically, we delineate the conceptual structure underlying agile scholarship by performing an analysis of authors who have made notable contributions to the field. Further, we summarize prior research and introduce contributions in this special issue on agile software development. We conclude by discussing directions for future research and urging agile researchers to embrace a theory-based approach in their scholarship. © 2012 Elsevier Inc. All rights reserved.},
+author = {Dings\o yr, Torgeir and Nerur, Sridhar and Balijepally, Venugopal and Moe, Nils Brede},
+doi = {10.1016/j.jss.2012.02.033},
+file = {:Users/whn/data/mendeley/1-s2.0-S0164121212000532-main.pdf:pdf},
+isbn = {0164-1212},
+issn = {01641212},
+journal = {Journal of Systems and Software},
+keywords = {Agile software development,Crystal method,Feature-driven development,Information systems,Lean software development,Scrum,Software engineering,Theory,eXtreme programming, XP},
+mendeley-groups = {km},
+number = {6},
+pages = {1213--1221},
+title = {{A decade of agile methodologies: Towards explaining agile software development}},
+volume = {85},
+year = {2012}
+}
