--- a/refs.bib
+++ b/refs.bib
@@ -948,3 +948,12 @@ title = {{A Design Science Research Methodology for Information Systems Research
 volume = {24},
 year = {2008}
 }
+
+@Manual{R2015,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2015},
+    url = {http://www.R-project.org/},
+  }
