--- a/outline.org
+++ b/outline.org
@@ -896,6 +896,9 @@
     who took the test twice test-retest reliability was computed,
     using Pearson's $r$.
 
+    The fraction of participants who correctly identified each stimlus
+    was computed.
+
     For analyzing effects of learning a linear model with a
     trialnumber as the predictor was constructed.
 
@@ -1095,7 +1098,35 @@
 ** Evaluation
    A total of $4268$ responses were collected, $2977$ of which were
    correct and $1291$ were incorrect, for an overall hit-rate of
-   $69.75\%$
+   $69.1887\%$
+
+   | Emotion   | Hit-rate |
+   |-----------+----------|
+   | Anger     |    62.96 |
+   | Contempt  |    59.75 |
+   | Disgust   |    61.98 |
+   | Fear      |    57.78 |
+   | Happiness |    95.43 |
+   | Sadness   |    57.04 |
+   | Surprise  |    89.38 |
+
+
+   The number of participants identifying every stimulus of each emotion correctly were
+   computed.
+
+   | Emotion   | Participants without misses |
+   |-----------+-----------------------------|
+   | Anger     |                           9 |
+   | Contempt  |                          12 |
+   | Disgust   |                           9 |
+   | Fear      |                           5 |
+   | Happiness |                          59 |
+   | Sadness   |                           2 |
+   | Surprise  |                          45 |
+   | Each      |                           0 |
+
+
+
 
    For the 31 participants taking the test twice, the measured
    test-retest correlation of $r=0.8542$ ($p < 0.001$, $df=29$).  This
