--- a/stimsets.tex
+++ b/stimsets.tex
@@ -10,5 +10,6 @@
     RaFD    & 49 &  8 & 5 & European \& Moroccan \\
     NimStim & 43 &  9 & 1 & African-, Asian- European- \& Latin-American \\
     GEMEP   & 10 & 18 & 3 & European
+    \bottomrule
   \end{tabularx}
 \end{table}
