--- a/result-analysis/Analysis.ipynb
+++ b/result-analysis/Analysis.ipynb
@@ -9,6 +9,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from scipy import stats"
    ]
   },
